--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Sourcemanager - Lähdeviitearkisto</h1>
     <div class="button-container">
-        <a class="button" href="/logout">Lisää viite</a>
-        <a class="button" href="/new_book">Listaa kaikki viitteet</a>
+        <a class="button" href="/add_reference">Lisää viite</a>
+        <a class="button" href="/reference_list">Listaa kaikki viitteet</a>
         <a class="button" href="/search">Hae arkistosta</a>
     </div>
 </body>
